# griddle

./: .gitignore  Cargo.toml  README.md  griddle.csv  result.md
.github/workflows/: ci.yml  github-actions-demo.yml
src/: lib.rs
