[package]
name = "griddle"
version = "0.2.0"
authors = ["linshaoyong <linshaoyong@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[lib]
name = "griddle"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "bin/app.rs"